kubernetes/phpmyadmin/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: phpmyadmin
  namespace: mariadb-galera
  labels:
    app: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
spec:
  host: phpmyadmin.apps.okd.<path:secret/data/homelab/domain#url>
  to:
    kind: Service
    name: phpmyadmin
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
